--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
+/* main color #101155 */
+/* 
+  #968AB6
+  #FCF7FF
+  #FFFADE 
+*/
+
 :root {
   --border-radius-small: 0.2rem;
   --border-radius-medium: 0.4rem;
